working bentley-ottmann! need vizualization...

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,10 +22,14 @@ set(SOURCES
    dynamic_convex_hull.cpp
    douglas_pecker.cpp
    convex.cpp
+   bentley_ottmann.cpp
 )
 
 add_executable(cg-test ${SOURCES})
 target_link_libraries(cg-test ${GTEST_BOTH_LIBRARIES} ${GMP_LIBRARIES})
+
+add_executable(bentley-ottmann bentley_ottmann.cpp)
+target_link_libraries(bentley-ottmann ${GTEST_BOTH_LIBRARIES} ${GMP_LIBRARIES})
 
 file(GLOB_RECURSE HEADERS "*.h")
 add_custom_target(cg_test_headers SOURCES ${HEADERS})
