--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(triangulation)
 add_subdirectory(convex_hull)
 add_subdirectory(convex)
 add_subdirectory(douglas_peucker)
+add_subdirectory(bentley_ottmann)
