--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(convex_hull)
 add_subdirectory(convex)
 add_subdirectory(douglas_peucker)
 add_subdirectory(bentley_ottmann)
+add_subdirectory(farthest_points)
