--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,8 +2,10 @@ add_subdirectory(viewer)
 add_subdirectory(operations)
 add_subdirectory(orientation)
 add_subdirectory(triangulation)
+add_subdirectory(triangulation_points)
 add_subdirectory(convex_hull)
 add_subdirectory(convex)
 add_subdirectory(douglas_peucker)
 add_subdirectory(bentley_ottmann)
 add_subdirectory(farthest_points)
+add_subdirectory(visibility)
