--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(douglas_peucker)
 add_subdirectory(bentley_ottmann)
 add_subdirectory(farthest_points)
 add_subdirectory(visibility)
+add_subdirectory(intersect_sphere)
